Nk updated at 19/08/2021 UI screens of Rating,Replace,address

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -26,18 +26,33 @@
   "full_name" : "Full Name",
   "input_full_name" : "Input your Full Name",
   "product_review" : "Write a product Review",
+  "writen_review" : "Add a written review",
+  "hint_review" : "What did you like or dislike?What are the areas  we need improvement?",
+  "return_replace" : "Return or Replace item",
   "track_order" : "Track Order",
   "invoice" : "Download Invoice",
+  "performance" : "Performance & Quality",
+  "damage" : "Product Damage",
+  "item_arrived" : "Item arrived too late",
+  "wrong_item" : "Wrong item sent",
+  "extra_item" : "Received extra item.I didn't buy",
   "input_religion" : "Input your religion",
-  "nationality" : "Nationality",
-  "input_nationality" : "Input your nationality",
   "loc" : "Location",
   "input_loc" : "Input your Location",
-  "height" : "Height(ft)",
-  "input_height" : "Input your Height in feets",
-  "age" : "Age(yrs)",
-  "input_age" : "Input your Age in yrs",
-  "education" : "Education",
+  "last30days" : "Last 30 days",
+  "last60days" : "Last 60 days",
+  "2020" : "2020",
+  "2021" : "2021",
+  "older" : "Older",
+  "accepted" : "Order Accepted",
+  "notified" : "Producer notified",
+  "reserved" : "Vehicle Reserved",
+  "onItsWay" : "Vehicle is on its way",
+  "completed" : "Job Completed",
+  "chargeable delivery": "Urgent Delivery - ",
+  "free delivery": "Planned Schedule of Service - ",
+  "choose date": "Choose Delivery date",
+  "choose date": "Choose Delivery date",
   "cont_facebook" : "Continue with facebook",
   "cont_google" : "Continue with Google",
   "login_phone" : "Login with Phone Number",
@@ -53,9 +68,11 @@
   "always_on": "Always On",
   "always_off": "Always Off",
   "about_us": "About Us",
-  "who_we_are": "WHO WE ARE ?",
-  "what_we_do": "WHAT WE DO ?",
-  "meet_our_team": "MEET OUR TEAM",
+  "app_exp": "App Experience",
+  "vehicle_quality": "Vehicle quality",
+  "drive_exp": "Drive Experience",
+  "pay_exp": "Payment Experience",
+  "overall": "Overall",
   "category": "Category",
   "country": "Country",
   "state": "State",
