Nk updated at 1/09/2021 addto cart,view cart

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -73,6 +73,7 @@
   "drive_exp": "Drive Experience",
   "pay_exp": "Payment Experience",
   "overall": "Overall",
+  "pay_option": "Select Payment Option",
   "category": "Category",
   "country": "Country",
   "state": "State",
