Nk updated at 16/09/2021 razor pay,reported issus resolved

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -3,6 +3,9 @@
   "producer": "Producers",
   "my_order": "My Orders",
   "profile": "Profile",
+  "orders": "Orders",
+  "inventory": "Inventory",
+  "claims": "Claims",
   "message": "Messages",
   "notification": "Notification",
   "account": "Account",
