Nk updated at 21/09/2021 fleet manager(orders,inventory,additem) UI done

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -122,6 +122,11 @@
   "title": "Title",
   "input_title": "Input your title",
   "description": "Description",
+  "input_desc": "Input your description",
+  "size": "Size",
+  "input_size": "Input your size",
+  "items": "No. of Items",
+  "input_items": "Input your no.of items",
   "input_feedback": "Input your feedback",
   "filter": "Filter",
   "facilities": "Facilities",
