Nk updated at 30/11/2021 fleet manager:-done with integration of return replace list,staus update in return replace,cancell list integration,claim model integration

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -25,6 +25,7 @@
   "input_pincode": "Input your Pincode",
   "price": "Price",
   "input_price": "Input your Price",
+  "input_reason": "Enter Reason",
   "upload_image": "Upload Picture",
   "full_name" : "Full Name",
   "input_full_name" : "Input your Full Name",
@@ -123,8 +124,8 @@
   "input_title": "Input your title",
   "description": "Description",
   "input_desc": "Input your description",
-  "size": "Size",
-  "input_size": "Input your size",
+  "rate": "Rate",
+  "input_rate": "Input your Rate per hour",
   "items": "No. of Items",
   "input_items": "Input your no.of items",
   "input_feedback": "Input your feedback",
