Nk updated at 19/01/2022 updated code with address,conveyance integation,landscape mode disabled,snackbar issue resolved

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -23,6 +23,10 @@
   "input_zipcode": "Input your Zipcode",
   "pincode": "Pincode",
   "input_pincode": "Input your Pincode",
+  "street": "Street No.",
+  "input_Street": "Input your Street No.",
+  "flat": "House/Flat No.",
+  "input_flat": "Input your House/Flat No.",
   "price": "Price",
   "input_price": "Input your Price",
   "input_reason": "Enter Reason",
