Nk updated at 2/02/2022 updated code with UI issues fixed

--- a/assets/locale/en.json
+++ b/assets/locale/en.json
@@ -15,7 +15,7 @@
   "last_name": "Last Name",
   "input_last_name": "Input your Last Name",
   "mobile": "Mobile Number",
-  "input_mobile": "Input your Mobile Number",
+  "input_mobile": "Enter your Mobile Number",
   "dob": "Date Of Birth",
   "input_dob": "Input your Date Of Birth",
   "gender": "Gender",
